force-app/main/default/objects/Offering__c/Offering__c.object-meta.xml
<CustomObject>
    <label>Offering</label>
    <nameField>
        <displayFormat>OFR-{0000}</displayFormat>
        <label>Offering Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offerings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>