force-app/main/default/objects/Offering__c/fields/Funding_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Funding_Deadline__c</fullName>
    <description>Last date by which committed capital must be funded for this Offering.</description>
    <inlineHelpText>Enter the funding deadline date for this Offering.</inlineHelpText>
    <label>Funding Deadline</label>
    <type>Date</type>
</CustomField>