force-app/main/default/objects/Offering__c/fields/GP_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>GP_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Bank Account that receives/holds capital for this Offering's General Partner entity.</description>
    <inlineHelpText>Select the GP bank account associated with this Offering.</inlineHelpText>
    <label>GP Bank Account</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Offerings</relationshipLabel>
    <relationshipName>GP_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>