force-app/main/default/objects/Offering__c/fields/GP_Entity__c.field-meta.xml
<CustomField>
    <fullName>GP_Entity__c</fullName>
    <description>Name of the General Partner entity sponsoring this Offering.</description>
    <inlineHelpText>Enter the legal name of the sponsoring GP entity.</inlineHelpText>
    <label>GP Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>