force-app/main/default/objects/Offering__c/fields/Investment_Time_Horizon__c.field-meta.xml
<CustomField>
    <fullName>Investment_Time_Horizon__c</fullName>
    <description>Expected holding period for this Offering, as communicated to investors.</description>
    <inlineHelpText>Enter the expected investment time horizon, e.g. "5-7 years".</inlineHelpText>
    <label>Investment Time Horizon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>