force-app/main/default/objects/Offering__c/fields/IR_Owner__c.field-meta.xml
<CustomField>
    <fullName>IR_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IR Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>IR Owner</relationshipLabel>
    <relationshipName>IR_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>