force-app/main/default/objects/Offering__c/fields/Minimum_Investment__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Investment__c</fullName>
    <description>Minimum dollar amount an investor must commit to participate in this Offering.</description>
    <inlineHelpText>Enter the minimum investment amount in USD.</inlineHelpText>
    <label>Minimum Investment</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>