force-app/main/default/objects/Offering__c/fields/Offering_Name__c.field-meta.xml
<CustomField>
    <fullName>Offering_Name__c</fullName>
    <description>Human-readable name of the Offering. Separate from the standard Name field, which is an auto-generated OFR-{0000} number used as the record identifier.</description>
    <inlineHelpText>Enter the marketing/deal name investors will recognize for this Offering.</inlineHelpText>
    <label>Offering Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>