force-app/main/default/objects/Offering__c/fields/Price_Per_Share__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Share__c</fullName>
    <description>Price per share/unit at which investors purchase into this Offering.</description>
    <inlineHelpText>Enter the price per share/unit in USD.</inlineHelpText>
    <label>Price Per Share</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>