force-app/main/default/objects/Offering__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pre Launch</fullName>
            </value>
            <value>
                <fullName>Active Fundraising</fullName>
            </value>
            <value>
                <fullName>Fully Subscribed</fullName>
            </value>
            <value>
                <fullName>Signatures Pending</fullName>
            </value>
            <value>
                <fullName>Ready to Activate</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>