force-app/main/default/objects/Offering__c/fields/Target_Cash_on_Cash__c.field-meta.xml
<CustomField>
    <fullName>Target_Cash_on_Cash__c</fullName>
    <description>Targeted annual cash-on-cash return projected for investors in this Offering.</description>
    <inlineHelpText>Enter the target cash-on-cash return as a percentage, e.g. 7.50 for 7.5%.</inlineHelpText>
    <label>Target Cash on Cash</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>