force-app/main/default/objects/Offering__c/fields/Target_Investor_AAR__c.field-meta.xml
<CustomField>
    <fullName>Target_Investor_AAR__c</fullName>
    <description>Targeted average annual return (AAR) projected for investors in this Offering.</description>
    <inlineHelpText>Enter the target investor AAR as a percentage, e.g. 12.00 for 12%.</inlineHelpText>
    <label>Target Investor AAR</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>