force-app/main/default/objects/Offering__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Free-text classification of this Offering (e.g., asset class or investment structure).</description>
    <inlineHelpText>Enter the type/classification of this Offering.</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>